# ImageToGCode

./: .gitignore  ReadMe.md  book.toml
src/: .gitignore  CMakeLists.txt  Common.hpp  ImageToGCode.cpp  ImageToGCode.h  ReadMe.md  SUMMARY.md  g0g1impl.cpp  main.cpp
src/BidirectionalScanning/: main.cpp
src/Common/: Plane.h
src/DiagonalScanning/: main.cpp
src/SpiralScanning/: main.cpp
src/UnidirectionalScanning/: main.cpp
src/doc/: 基于OpenCV灰度图像转GCode的单向扫描实现.md  基于OpenCV灰度图像转GCode的双向扫描实现.md  基于OpenCV灰度图像转GCode的斜向扫描实现.md  基于OpenCV灰度图像转GCode的螺旋扫描实现.md  基于二值化图像转GCode的单向扫描实现.md  基于二值化图像转GCode的双向扫描实现.md  基于二值化图像转GCode的斜向扫描实现.md  基于二值化图像转GCode的螺旋扫描实现.md  深入理解G0和G1指令-C++中的实现与激光雕刻应用.md
